--- a/css/style.css
+++ b/css/style.css
@@ -55,17 +55,35 @@ footer{
 
 @-webkit-keyframes logo_wiggle{
   /*Your code here.*/
+  0% {
+    width: 25px;
+  }
+  100% {
+    width: 420px;
+  }
+
+
+  
+
+
 
 }
 
 @keyframes logo_wiggle{
   /*Your code here.*/
+  0% {
+    width: 25px;
+  }
+  100% {
+    width: 420px;
+  }
 
 } 
 
 #logo{
    /*Your code here.*/
- 
+  animation-name: logo_wiggle;
+  animation-duration: 15s;
 }
 
 /* Cards! */
