display flex on pricing

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,8 @@ footer{
     min-height: 500px;
     /*Your code here.*/
     /*Don't forget to vertically and horizontally alight the card*/
+    display: flex;
+    align-self: auto;
   
 }
 
