--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,8 @@ footer{
     /*Your code here.*/
     /*Don't forget to vertically and horizontally alight the card*/
     display: flex;
-    align-self: auto;
+    flex-wrap: wrap;
+    justify-content: space-between;
   
 }
 
