--- a/css/style.css
+++ b/css/style.css
@@ -92,9 +92,9 @@ footer{
     /*Your code here.*/
     /*Don't forget to vertically and horizontally alight the card*/
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-  
+    flex-wrap: wrap;
 }
 
 .card {
