--- a/css/style.css
+++ b/css/style.css
@@ -163,14 +163,14 @@ header{
   background: #fff;
   border-bottom: 3px solid #50C7C7;
   /*Your  code here again.*/
-  display: flex;
+  /*display: flex;*/
 }
 
 .nav_links{
   /*Your code here again.*/
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /*display: flex;
+  /*flex-direction: column;
+  align-items: center;*/
 }
 
 .nav_item a{
