--- a/css/style.css
+++ b/css/style.css
@@ -92,9 +92,10 @@ footer{
     /*Your code here.*/
     /*Don't forget to vertically and horizontally alight the card*/
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    /*flex-wrap: wrap;*/
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .card {
@@ -104,7 +105,7 @@ footer{
   padding: 0 0 50px 0;
   /*Your code here.*/
   /*Take a look at flex-basis*/
-  /*flex-basis: 400px;*/
+  flex-basis: 400px;
 }
 
 .card > header{
@@ -150,10 +151,14 @@ footer{
 .gallery{
   min-height: 600px;
   /*Your code here again.*/
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  
 }
 
 .gallery > img{
-  border: 10px #50C7C7 solid;
+  border: 10px #121313 solid;
   margin: 10px;
   width: 300px;
 }
@@ -163,14 +168,16 @@ header{
   background: #fff;
   border-bottom: 3px solid #50C7C7;
   /*Your  code here again.*/
-  /*display: flex;*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .nav_links{
   /*Your code here again.*/
-  /*display: flex;
-  /*flex-direction: column;
-  align-items: center;*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .nav_item a{
