--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ footer{
 #logo{
    /*Your code here.*/
   animation-name: logo_wiggle;
-  animation-duration: 15s;
+  animation-duration: 1s;
 }
 
 /* Cards! */
@@ -197,6 +197,7 @@ header{
   /* Cards! */
   .card {
     /*Your  code here again.*/
+    flex-basis: 225px;
   }
 
   .card_big{
@@ -207,10 +208,16 @@ header{
   /* Navbar */
   header{
     /*Your code here again.*/  
+    flex-direction: row;
+    justify-content: space-between;
+
   }
 
   .nav_links{
     /*Your code here again.*/  
+    flex-direction: row;
+    justify-content: space-evenly;
+    
   }
 
   .nav_item a{
@@ -228,3 +235,8 @@ header{
 
 /*Your code here again.*/ 
 /*Add media query to handle reduced-motion*/
+@media screen and (prefers-reduced-motion: reduce) {
+  #logo{
+    animation: none;
+  }
+ }
