--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,8 @@ header{
     background-image: none;
   }
   .pricing{
-    vertical-align: top;
+    /*vertical-align: top;*/
+    align-items: flex-start;
   }
   .gallery{
     display: none;
